.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glusr__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glusr</customHelpPage>
    <description>glusr__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glusr_syusr__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glusr_syusr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glusr_dfltcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Set to the Financial Company most often used by this Financial User</inlineHelpText>
        <label>Default Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial System Users</relationshipLabel>
        <relationshipName>glusrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glusr_inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactive Financial User</description>
        <inlineHelpText>Inactive Financial User</inlineHelpText>
        <label>Inactive Financial User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glusr_lastcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When Financial User is a Multi Financial Company user, you can switch which Financial Company you are in by changing this field to the Financial Company desired.  In many pages, this can be done via a slide out menu on upper right of page, if desired.</inlineHelpText>
        <label>Current Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial System Users (Current Financial Company)</relationshipLabel>
        <relationshipName>glusrs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glusr_multicompany__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows this Financial User to access all Financial Companies on the org</inlineHelpText>
        <label>Multi Financial Company User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glusr_syusr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select a valid Mfg User</inlineHelpText>
        <label>Manufacturing User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Financial System Users</relationshipLabel>
        <relationshipName>glusrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial System User</label>
    <listViews>
        <fullName>rstkf__RS_Financial_System_Users</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glusr_syusr__c</columns>
        <columns>rstkf__glusr_dfltcmpno__c</columns>
        <columns>rstkf__glusr_inactive__c</columns>
        <columns>rstkf__glusr_lastcmpno__c</columns>
        <columns>rstkf__glusr_multicompany__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Financial System Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_System_Users_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glusr_syusr__c</columns>
        <columns>rstkf__glusr_dfltcmpno__c</columns>
        <columns>rstkf__glusr_lastcmpno__c</columns>
        <columns>rstkf__glusr_multicompany__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial System Users - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial System Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__fullaccessusercheck_addingnewfinuser</fullName>
        <active>true</active>
        <description>Financial Users must be Full Access Users</description>
        <errorConditionFormula>ISNEW() &amp;&amp; rstkf__glusr_syusr__r.rstk__syusr_licreq__c = false</errorConditionFormula>
        <errorMessage>Financial Users must be Full Access Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__fullaccessusercheck_editexistingfinuser</fullName>
        <active>true</active>
        <description>Financial Users must be Full Access Users</description>
        <errorConditionFormula>AND(ISCHANGED(rstkf__glusr_inactive__c), rstkf__glusr_inactive__c = false) &amp;&amp; rstkf__glusr_syusr__r.rstk__syusr_licreq__c = false</errorConditionFormula>
        <errorMessage>Financial Users must be Full Access Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__manufacturingusrsisreqd</fullName>
        <active>true</active>
        <description>Manufacturing Users is required and cannot be modifiable</description>
        <errorConditionFormula>ISBLANK( rstkf__glusr_syusr__c ) ||  ISNULL( rstkf__glusr_syusr__c ) 
|| ( !ISNEW() &amp;&amp;  ISCHANGED( rstkf__glusr_syusr__c) )</errorConditionFormula>
        <errorMessage>Manufacturing Users is required and cannot be modifiable</errorMessage>
    </validationRules>
</CustomObject>